[package]
name = "rush"
version = "0.0.2"
authors = ["Ben Goldberg <jediben97@gmail.com>"]

[lib]
doc = true
name = "rush"
path = "src/lib.rs"

[dependencies]
toml = "0.2.1"
libc = { git = "https://github.com/zethra/libc.git" }
#clippy = "0.0.94"
rustyline = "1.0.0"
nix = { git = "https://github.com/nix-rust/nix" }

[profile.dev]
opt-level = 0
debug = true
rpath = false
lto = false
debug-assertions = true
codegen-units = 1

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = false
debug-assertions = false
codegen-units = 1

[profile.test]
opt-level = 0
debug = true
rpath = false
lto = false
debug-assertions = true
codegen-units = 1

[profile.bench]
opt-level = 3
debug = false
rpath = false
lto = false
debug-assertions = false
codegen-units = 1

[profile.doc]
opt-level = 0
debug = true
rpath = false
lto = false
debug-assertions = true
codegen-units = 1
