[package]
name = "rush"
version = "0.0.2"
authors = ["Ben Goldberg <jediben97@gmail.com>"]
build = "build.rs"

[lib]
doc = true
name = "rush"
path = "src/lib.rs"

[dependencies]
toml = "0.2.1"
libc = { git = "https://github.com/rust-lang/libc.git" }
rustyline = { git="https://github.com/kkawakam/rustyline.git" }
nix = { git = "https://github.com/nix-rust/nix.git" }

[build-dependencies]
peg = "0.5"

[profile.dev]
opt-level = 0
debug = true
rpath = false
lto = false
debug-assertions = true
codegen-units = 1
panic = 'unwind'

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'unwind'

[profile.test]
opt-level = 0
debug = true
rpath = false
lto = false
debug-assertions = true
codegen-units = 1
panic = 'unwind'

[profile.bench]
opt-level = 3
debug = false
rpath = false
lto = false
debug-assertions = false
codegen-units = 1
panic = 'unwind'

[profile.doc]
opt-level = 0
debug = true
rpath = false
lto = false
debug-assertions = true
codegen-units = 1
panic = 'unwind'
